# open-movie-generator-app

./: .env.template  .gitignore  README.md  build.sh  main.py  pyproject.toml  requirements.txt
script/: install.sh  multi_bulletin_short.sh  multi_trivia.sh
src/: __init__.py  main.py
src/cmd/: generate.py  main.py  upload.py
src/command/: __init__.py  bulletin.py  trivia.py
src/module/: __init__.py
src/module/audio_generator/: __init__.py  audio_generator.py  voicevox_audio_generator.py
src/module/manuscript_generator/: __init__.py  bulletin_board_manuscript_generator.py  manuscript_generator.py  pseudo_bulletin_board_manuscript_generator.py  trivia_manuscript_generator.py
src/module/movie_generator/: __init__.py  dalle_short_movie_generator.py  irasutoya_long_movie_generator.py  irasutoya_movie_generator.py  irasutoya_short_movie_generator.py  movie_generator.py  trivia_short_movie_generator.py
src/module/thumbnail_generator/: __init__.py  bulletin_board_long_thumbnail_generator.py  bulletin_board_short_thumbnail_generator.py  bulletin_board_thumbnail_generator.py  dalle_thumbnail_generator.py  thumbnail_generator.py  trivia_thumbnail_generator.py
src/resource/bulletin_board/: video_description_template.j2
src/resource/bulletin_board_short/: video_description_template.j2
src/resource/common/: voicevox_speaker_attributes.json
src/resource/pseudo_bulletin_board/: example_manuscript.json  topics.json  video_description_template.j2
src/util/: __init__.py  flet.py  license.py  nlp.py  openai.py  resource.py  setup.py  upload.py
