[project]
name = "auto-movie-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.10"
dependencies = [
    "bs4>=0.0.2",
    "html5lib>=1.1",
    "lxml>=5.3.0",
    "moviepy==1.0.3",
    "onnxruntime>=1.19.0",
    "openai>=1.43.0",
    "playwright>=1.46.0",
    "requests>=2.32.3",
    "ulid-py>=1.1.0",
    "pillow==9.5.0",
    "google-api-python-client>=2.143.0",
    "python-dotenv>=1.0.1",
    "fugashi>=1.3.2",
    "unidic-lite>=1.0.8",
    "flet>=0.24.1",
    "pip>=24.3.1",
    "matplotlib>=3.9.2",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pyinstaller>=6.11.1",
    "ruff>=0.6.4",
    "types-requests>=2.32.0.20240907",
]
